Adjust globals to fix stretching on large displays

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,9 @@
 
   color: black;
   background-color: white;
+
+  margin-left: 160px;
+  margin-right: 160px;
 }
 
 * {
@@ -13,9 +16,8 @@
 }
 
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  margin: 0 160px;
+  max-width: 1400px;
+  margin: 0 auto;
   line-height: 180%;
   font-size: 1rem;
   font-family: var(--font-secondary);
